ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).simplify().snap
---
source: src/query/ir.rs
description: "And([EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).simplify()"
---
And(
    [
        EntityId(
            42,
        ),
        WithComponent(
            "ecsdb::Test",
        ),
    ],
)
