ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([Or([WithComponent("ecsdb::A"), WithComponent("ecsdb::B")]), WithoutComponent("ecsdb::C")]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "And([Or([WithComponent(\"ecsdb::A\"), WithComponent(\"ecsdb::B\")]), WithoutComponent(\"ecsdb::C\")]).simplify()"
---
And(
    [
        Or(
            [
                WithComponent(
                    "ecsdb::A",
                ),
                WithComponent(
                    "ecsdb::B",
                ),
            ],
        ),
        WithoutComponent(
            "ecsdb::C",
        ),
    ],
)
