ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([WithComponent("ecsdb::A"), Or([WithComponent("ecsdb::B"), WithComponent("ecsdb::C")])]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::A\"), Or([WithComponent(\"ecsdb::B\"), WithComponent(\"ecsdb::C\")])]).simplify()"
---
And(
    [
        WithComponent(
            "ecsdb::A",
        ),
        Or(
            [
                WithComponent(
                    "ecsdb::B",
                ),
                WithComponent(
                    "ecsdb::C",
                ),
            ],
        ),
    ],
)
