ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).simplify()"
---
And(
    [
        WithComponent(
            "ecsdb::Foo",
        ),
        WithoutComponent(
            "ecsdb::Bar",
        ),
    ],
)
